--- a/index.html
+++ b/index.html
@@ -5,12 +5,22 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
+  <nav class="">
+  </nav>
+  <section id="">
+    <div class="daily-forecast" id="">
 
-  <h1>Hello World!</h1>
+    </div>
 
+    <div class="weekly-forecast" id="weekly-forecast">
+    </div>
+  </section>
+
+  <script src="dist/script.js"></script>
 </body>
 
 </html>
