--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
 
 <body>
   <nav class="">
+    <a href="">nav</a>
   </nav>
+
   <section id="">
-    <div class="daily-forecast" id="">
+    <div class="daily-forecast" id="daily-forecast">
 
     </div>
 
     <div class="weekly-forecast" id="weekly-forecast">
+
     </div>
   </section>
 
   <script src="dist/script.js"></script>
+  <script src="dist/temp-script.js"></script>
 </body>
 
 </html>
