--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet"
+        href="style/style.css">
 </head>
 
 <body>
@@ -14,11 +16,21 @@
   </nav>
 
   <section id="">
-    <div class="daily-forecast" id="daily-forecast">
+    <div class="forecast">
+      <div class="daily-forecast"
+           id="daily-forecast">
+      </div>
+      <div id="forecast-icon">
+        <img src="./assets/Icons/sunny.svg"
+             alt="Sunny Icon">
+      </div>
+
 
     </div>
+    </div>
 
-    <div class="weekly-forecast" id="weekly-forecast">
+    <div class="weekly-forecast"
+         id="weekly-forecast">
 
     </div>
   </section>
