--- a/index.html
+++ b/index.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="style/style.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="style/style.css">
-</head>
+  <body>
+    <nav class="">
+      <a href="">nav</a>
+    </nav>
 
-<body>
-  <nav class="">
-    <a href="">nav</a>
-  </nav>
+    <input type="text" id="city-input" placeholder="Search by city" />
+    <button id="search-btn">Search</button>
 
-  <section id="">
-    <div class="daily-forecast" id="daily-forecast">
+    <section id="">
+      <div class="daily-forecast" id="daily-forecast"></div>
 
-    </div>
+      <div class="weekly-forecast" id="weekly-forecast"></div>
+    </section>
 
-    <div class="weekly-forecast" id="weekly-forecast">
-
-    </div>
-  </section>
-
-  <script src="dist/script.js"></script>
-  <script src="dist/temp-script.js"></script>
-</body>
-
+    <script src="dist/script.js"></script>
+    <script src="dist/temp-script.js"></script>
+  </body>
 </html>
