--- a/index.html
+++ b/index.html
@@ -1,38 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet"
-        href="style/style.css">
+  <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
   <nav class="">
     <a href="">nav</a>
   </nav>
-  
-    <input type="text" id="city-input" placeholder="Search by city" />
-   <button id="search-btn">Search</button>
+
+  <input type="text" id="city-input" placeholder="Search by city" />
+  <button id="search-btn">Search</button>
 
   <section id="">
     <div class="forecast">
-      <div class="daily-forecast"
-           id="daily-forecast">
+      <div class="daily-forecast" id="daily-forecast">
       </div>
       <div id="forecast-icon">
-        <img src="./assets/Icons/sunny.svg"
-             alt="Sunny Icon">
+        <img src="./assets/Icons/sunny.svg" alt="Sunny Icon">
       </div>
 
 
     </div>
     </div>
 
-    <div class="weekly-forecast"
-         id="weekly-forecast">
+    <div class="weekly-forecast" id="weekly-forecast">
 
     </div>
   </section>
@@ -42,4 +38,3 @@
 </body>
 
 </html>
-
