Fixed the animation for the weekly forecast

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
     <div class="forecast">
       <div id="forecast-icon">
       </div>
-      <div class="daily-forecast"
-           id="daily-forecast">
+      <div class="daily-forecast" id="daily-forecast">
       </div>
     </div>
     </div>
