--- a/index.html
+++ b/index.html
@@ -4,17 +4,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Weather App</title>
   <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
-  <nav class="">
-    <a href="">nav</a>
-  </nav>
-
+  <div class="search-container">
   <input type="text" id="city-input" placeholder="Search by city" />
   <button id="search-btn">Search</button>
+</div>
 
   <section id="">
     <div class="forecast">
