Refactor HTML structure and improve CSS formatting on seach bar

--- a/index.html
+++ b/index.html
@@ -3,37 +3,42 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1.0">
   <title>Weather App</title>
-  <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet"
+        href="style/style.css">
 </head>
 
 <body>
-  <div class="search-container">
-  <input type="text" id="city-input" placeholder="Search by city" />
-  <button id="search-btn">Search</button>
-</div>
-
-  <section id="">
-    <div class="forecast">
-      <div id="forecast-icon">
+  <nav>
+    <div class="search-container">
+      <input type="text"
+             id="city-input"
+             placeholder="Search by city" />
+      <button id="search-btn">Search</button>
+    </div>
+    <section id="">
+      <div class="forecast">
+        <div id="forecast-icon">
+        </div>
+        <div class="daily-forecast"
+             id="daily-forecast">
+        </div>
       </div>
-      <div class="daily-forecast" id="daily-forecast">
       </div>
-    </div>
-    </div>
 
-    <div class="toggle-forecast">
-      <ul id="weekly-forecast">
+      <div class="toggle-forecast">
+        <ul id="weekly-forecast">
 
-      </ul>
+        </ul>
 
 
-    </div>
-  </section>
+      </div>
+    </section>
 
-  <script src="dist/script.js"></script>
-  <script src="dist/temp-script.js"></script>
+    <script src="dist/script.js"></script>
+    <script src="dist/temp-script.js"></script>
 </body>
 
 </html>
