enhance CSS styles for navigation and forecast sections

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 
 <body>
   <nav>
-    <div class="search-container">
+    <nav class="search-container">
       <input type="text"
              id="city-input"
              placeholder="Search by city" />
       <button id="search-btn">Search</button>
-    </div>
+      </div>
+    </nav>
     <section id="">
       <div class="forecast">
         <div id="forecast-icon">
