new button for toggle

--- a/index.html
+++ b/index.html
@@ -3,19 +3,16 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Weather App</title>
-  <link rel="stylesheet"
-        href="style/style.css">
+  <link rel="stylesheet" href="style/style.css">
+  <link rel="stylesheet" href="style/class-compact.css">
 </head>
 
 <body>
   <nav>
     <nav class="search-container">
-      <input type="text"
-             id="city-input"
-             placeholder="Search by city" />
+      <input type="text" id="city-input" placeholder="Search by city" />
       <button id="search-btn">Search</button>
       </div>
     </nav>
@@ -23,8 +20,7 @@
       <div class="forecast">
         <div id="forecast-icon">
         </div>
-        <div class="daily-forecast"
-             id="daily-forecast">
+        <div class="daily-forecast" id="daily-forecast">
         </div>
       </div>
       </div>
