--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
       </div>
     </nav>
     <section id="">
-      <div class="forecast">
+      <div id="forecast" class="forecast">
         <div id="forecast-icon">
         </div>
         <div class="daily-forecast" id="daily-forecast">
         </div>
       </div>
+      </div>
+
+      <div class="week-button">
+        <button id="toggle-btn">▲</button>
       </div>
 
       <div class="toggle-forecast">
