--- a/index.html
+++ b/index.html
@@ -13,38 +13,38 @@
 </head>
 
 <body>
+  <div class="desktop">
+    <nav class="search-container">
+      <input type="text"
+             id="city-input"
+             placeholder="Search by city" />
+      <button id="search-btn">Search</button>
 
-  <nav class="search-container">
-    <input type="text"
-           id="city-input"
-           placeholder="Search by city" />
-    <button id="search-btn">Search</button>
-    </div>
-  </nav>
-  <section id="">
-    <div id="forecast"
-         class="forecast">
-      <div id="forecast-icon">
+    </nav>
+    <section id="">
+      <div id="forecast"
+           class="forecast">
+        <div id="forecast-icon">
+        </div>
+        <div class="daily-forecast"
+             id="daily-forecast">
+        </div>
       </div>
-      <div class="daily-forecast"
-           id="daily-forecast">
+
+
+      <div class="week-button">
+        <button id="toggle-btn">▲</button>
       </div>
-    </div>
-    </div>
 
-    <div class="week-button">
-      <button id="toggle-btn">▲</button>
-    </div>
+      <div class="toggle-forecast">
+        <ul id="weekly-forecast">
 
-    <div class="toggle-forecast">
-      <ul id="weekly-forecast">
-
-      </ul>
+        </ul>
 
 
-    </div>
-  </section>
-
+      </div>
+    </section>
+  </div>
   <script src="dist/script.js"></script>
   <script src="dist/temp-script.js"></script>
 </body>
