add loading spinner and functionality for page load events

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       </div>
     </section>
   </div>
+  <div class="loader"></div>
   <script src="dist/script.js"></script>
   <script src="dist/temp-script.js"></script>
 </body>
