made the button animation better

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
       </div>
 
-      <div class="week-button">
+      <div id="week-btn" class="week-button">
         <button id="toggle-btn">▲</button>
       </div>
 
